tests/ui/typeck/issue-65611.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-65611.rs:59:13
   |
LL |     let x = buffer.last().unwrap().0.clone();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
